Update1 index.html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <div class="Contactall">
-          <a href="file:///C:/Users/prgam/OneDrive/Desktop/website/index.html"><button class="home" id="contactbut">Home</button></a>
-          <a href="file:///C:/Users/prgam/OneDrive/Desktop/website/contact.html"><button class="Contact1" id="contactbut">Contact</button></a>
+          <a href="https://martin213g.github.io/Iphone_WI-FI_Problem.github.io/"><button class="home" id="contactbut">Home</button></a>
+          <a href="https://martin213g.github.io/MartinApostolov.github.io/"><button class="Contact1" id="contactbut">Contact</button></a>
           <button class="iconset1"><img class="iconset2" src="css/bxs-cog.svg" width="50px" alt="" title="Settings"></button>
         </div>
         <br>
